[metadata]
name = seisbai_contracts
version = 0.1.0
author = Oxaala
description = A lib to store the contracts between Seisbai-PRO and Seisbai-Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seunome/minhalib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10