[metadata]
name = seisbai_tools
version = 1.0.0
author = Oxaala
description = A library for storing tools used in Seisbai-PRO and Seisbai-Server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seunome/minhalib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10